fixed issue with buton and alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -234,6 +234,7 @@ button:hover {
     text-align: left;
 }
 .news-head{
+    text-align: left;
     margin-bottom: 12px;
     margin-top: 0px;
 }
@@ -379,7 +380,7 @@ input::placeholder{
     border: none;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    padding: 11px 32px;
+    padding: 15px 32px;
     
    
 
